# 3d-raster-c

./: .clang-format  .gitignore  CMakeLists.txt  README.md  clean.bat  compile.sh  debug.bat  license.sh  makefile  run.bat
hymn/hymn/syntaxes/: hymn.tmLanguage.json
pack/maps/: base.wad  home.wad  town.wad
pack/paint/: tic_80_wide_font.wad  tiles.wad
pack/pictures/: baron.wad  tic_80_wide_font.wad
pack/things/: zombie.wad
src/: array.c  array.h  assets.c  assets.h  camera.c  camera.h  canvas.c  canvas.h  cell.c  draw.c  draw.h  file_io.c  file_io.h  fileio.c  fileio.h  game.c  game.h  game_state.c  hymn.c  hymn.h  image.c  image.h  input.h  line.c  list.c  list.h  log.h  main.c  main.h  main.hm  main.lua  math_util.c  math_util.h  matrix.c  matrix.h  mem.c  mem.h  paint.c  paint.h  paint_state.c  (+51 more)
test/: CMakeLists.txt  in.hm  std.hm  switch.hm  test.bat  test_array.c  test_array.h  test_set.c  test_set.h  test_table.c  test_table.h  test_uint_table.c  test_uint_table.h  try.hm
wad/wad/: package.json
wad/wad/syntaxes/: wad.tmLanguage.json
